--- a/lib/l10n/intl_ru_BY.arb
+++ b/lib/l10n/intl_ru_BY.arb
@@ -46,5 +46,19 @@
   "UserNotFound": "Пользователь не найден",
   "NoUserToDelete": "Некого удалять",
   "PleaseSignUp": "Пожалуйста, авторизуйтесь",
-  "TokenExpired": "Нет доступа, зарегистрируйтесь"
+  "TokenExpired": "Нет доступа, зарегистрируйтесь",
+  "Wins": "Победы",
+  "Battles": "Боёв",
+  "All": "Все",
+  "Ussr": "СССР",
+  "Usa": "США",
+  "China": "Китай",
+  "Uk": "Британия",
+  "Czech": "Чехия",
+  "Sweden": "Швеция",
+  "Poland": "Польша",
+  "Italy": "Италия",
+  "France": "Франция",
+  "Japan": "Япония",
+  "Germany": "Германия"
 }
