--- a/lib/l10n/intl_ru_BY.arb
+++ b/lib/l10n/intl_ru_BY.arb
@@ -60,5 +60,6 @@
   "Italy": "Италия",
   "France": "Франция",
   "Japan": "Япония",
-  "Germany": "Германия"
+  "Germany": "Германия",
+  "NoVehiclesToShow": "Нет машин для отображения"
 }
