fix: vehiclesRepo performance improved (_fetchAndSaveAllPages method) + some fixes

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -61,5 +61,6 @@
   "France": "France",
   "Japan": "Japan",
   "Germany": "Germany",
-  "NoVehiclesToShow": "No vehicles to show"
+  "NoVehiclesToShow": "No vehicles to show",
+  "NoDescription": "No Description"
 }
