--- a/lib/l10n/intl_ru_BY.arb
+++ b/lib/l10n/intl_ru_BY.arb
@@ -61,5 +61,6 @@
   "France": "Франция",
   "Japan": "Япония",
   "Germany": "Германия",
-  "NoVehiclesToShow": "Нет машин для отображения"
+  "NoVehiclesToShow": "Нет машин для отображения",
+  "NoDescription": "Нет описания"
 }
